opam-version: "2.0"
maintainer: "Armael <armael@isomorphis.me>"
authors: "Armael <armael@isomorphis.me>"
homepage: "https://github.com/Armael/ocaml-xkbcommon"
bug-reports: "https://github.com/Armael/ocaml-xkbcommon/issues"
depends: [
#  "conf-xkbcommon"
  "ocaml" {>= "4.04.1"}
  "ctypes"
  "ctypes-foreign"
  "dune"
  "base" { build }
  "stdio" { build }
]
build: ["dune" "build" "-p" name "-j" jobs "@install"]
