(rule
 (with-stdout-to
  "generated_ffi.ml"
  (run "../ffi/stubgen.exe" -ml)))

(rule
 (with-stdout-to
  "generated_ffi_stubs.c"
  (run "../ffi/stubgen.exe" -c)))

(library
 (name xkbcommon)
 (public_name xkbcommon)
 (modules keysyms generated_ffi context)
 (c_names generated_ffi_stubs)
 (c_flags (:standard -Werror -pedantic -Wall -Wunused) -w
          (:include ../config/xkbcommon-ccopt.sexp))
 (c_library_flags :standard
                  (:include ../config/xkbcommon-cclib.sexp))
 (libraries xkbcommon_types_f xkbcommon_ffi_f ctypes.stubs ctypes))
