; Functors containing the bindings
(library
 (name xkbcommon_types_f)
 (public_name xkbcommon.types_f)
 (modules types)
 (libraries ctypes ctypes.stubs ctypes.foreign))

; Stubgen, phase 1
(executables
 (names stubgen)
 (modules stubgen)
 (libraries xkbcommon_types_f ctypes.stubs ctypes))

; C file built by stubgen
(rule (with-stdout-to "types_stubgen.c" (run "./stubgen.exe")))

; Stubgen, phase 2
; C executable that checks struct offsets and outputs ML file
(rule
 (targets types_stubgen.exe)
 (deps    (:types_stubgen ./types_stubgen.c)
          ../config/xkbcommon-ccopt
          ../config/xkbcommon-cclib)
  (action (bash "\
%{cc} %{types_stubgen} \
  $(< ../config/xkbcommon-ccopt) $(< ../config/xkbcommon-cclib) \
  -I `dirname %{lib:ctypes:ctypes_cstubs_internals.h}` \
  -I %{ocaml_where} -o %{targets}")))
